--- a/web/Dashboard.css
+++ b/web/Dashboard.css
@@ -93,7 +93,7 @@ svg { display: block }
     height: 5px;
     position: absolute;
     right: 15px;
-    top: -6px;
+    top: -3px;
     width: 20px;
     border-top: 1px solid transparent;
     border-bottom: 1px solid transparent;
@@ -180,3 +180,50 @@ svg { display: block }
 
 /* Animating the top property in Microsoft Edge does not work so prevent animating it */
 _:-ms-lang(x), _:-webkit-full-screen, .individual-bubble { top: inherit !important }
+
+
+.label {
+    display: inline-flex;
+    align-items: left;
+    cursor: pointer;
+    color: #394a56;
+  }
+  
+  .label-text {
+    margin-left: 0;
+  }
+  
+  .toggle {
+      margin-top: 4px;
+    isolation: isolate;
+    position: relative;
+    height: 15px;
+    width: 30px;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow:
+      -8px -4px 8px 0px #ffffff,
+      8px 4px 12px 0px #d1d9e6,
+      4px 4px 4px 0px #d1d9e6 inset,
+      -4px -4px 4px 0px #ffffff inset;
+  }
+  
+  .toggle-state {
+    display: none;
+  }
+  
+  .indicator {
+    height: 100%;
+    width: 200%;
+    background: #ecf0f3;
+    border-radius: 15px;
+    transform: translate3d(-75%, 0, 0);
+    transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+    box-shadow:
+      -8px -4px 8px 0px #ffffff,
+      8px 4px 12px 0px #d1d9e6;
+  }
+  
+  .toggle-state:checked ~ .indicator {
+    transform: translate3d(25%, 0, 0);
+  }
