--- a/web/Dashboard.css
+++ b/web/Dashboard.css
@@ -68,7 +68,7 @@ svg { display: block }
     text-align: center;
     font-size: 1.5em;
     color: white;
-    top: calc(40% - 150px);
+    top: calc(85% - 150px);
     left: calc(50% - 39.5px);
 }
 .pointer { cursor: pointer }
@@ -93,7 +93,7 @@ svg { display: block }
     height: 5px;
     position: absolute;
     right: 15px;
-    top: -3px;
+    top: -8px;
     width: 20px;
     border-top: 1px solid transparent;
     border-bottom: 1px solid transparent;
@@ -226,4 +226,11 @@ _:-ms-lang(x), _:-webkit-full-screen, .individual-bubble { top: inherit !importa
   
   .toggle-state:checked ~ .indicator {
     transform: translate3d(25%, 0, 0);
+  }
+
+  .custom-control-btn {
+      width: 100%;
+      box-shadow: none;
+      border: 1px solid black;
+      font-family: inherit;
   }
